--- a/config/team_config.json
+++ b/config/team_config.json
@@ -3,14 +3,19 @@
     "teams": [
         {
             "id": "1",
-            "name": "Formula Student Team Delft",
-            "master": "http://localhost:11311 ",
+            "name": "Team A",
+            "master": "http://autonomous-system-1:11311/",
             "car_settings": {
+                "SeeDocsAt": "https://fs-online.github.io/Formula-Student-Driverless-Simulator/",
                 "SettingsVersion": 1.2,
                 "ViewMode": "SpringArmChase",
                 "ClockSpeed": 1.0,
+                "SpectatorServerPassword": "password",
+                "PawnPaths": {
+                  "DefaultCar": { "PawnBP": "Class'/AirSim/VehicleAdv/Cars/TechnionCar/TechnionCarPawn.TechnionCarPawn_C'" }
+                },
                 "Vehicles": {
-                    "FSCar": {
+                  "FSCar": {
                     "DefaultVehicleState": "",
                     "EnableCollisionPassthrogh": false,
                     "EnableCollisions": true,
@@ -19,192 +24,133 @@
                         "RemoteControlID": -1
                     },
                     "Sensors": {
-                        "Imu" : {
+                      "Imu" : {
                         "SensorType": 2,
                         "Enabled": true
-                        },
-                        "Gps" : {
+                      },
+                      "Gps" : {
                         "SensorType": 3,
                         "Enabled": true
-                        },
-                        "LidarCustom": {
-                        "SensorType": 6,
-                        "Enabled": true,
-                        "NumberOfLasers": 16,
-                        "PointsPerScan": 10000,
-                        "X": 0,
-                        "Y": 0,
-                        "Z": -1,
-                        "DrawDebugPoints": false
-                        }
+                      },
+                      "GSS" : {
+                        "SensorType": 7,
+                        "Enabled": true
+                      }
                     },
                     "Cameras": {
-                        "front_center_custom": {
-                        "CaptureSettings": [
-                            {
-                            "PublishToRos": 1,
-                            "ImageType": 0,
-                            "Width": 640,
-                            "Height": 480,
-                            "FOV_Degrees": 27,
-                            "DepthOfFieldFstop": 2.8,
-                            "DepthOfFieldFocalDistance": 200.0, 
-                            "DepthOfFieldFocalRegion": 200.0,
-                            "TargetGamma": 1.5
-                            }
-                        ],
-                        "X": 0.50, "Y": 0, "Z": 0.10,
-                        "Pitch": 0, "Roll": 0, "Yaw": 0
-                        },
-                        "front_left_custom": {
-                        "CaptureSettings": [
-                            {
-                            "PublishToRos": 1,
-                            "ImageType": 0,
-                            "Width": 672,
-                            "Height": 376,
-                            "FOV_Degrees": 90,
-                            "TargetGamma": 1.5
-                            }, 
-                            {
-                            "PublishToRos": 1,
-                            "ImageType": 1,
-                            "Width": 672,
-                            "Height": 376,
-                            "FOV_Degrees": 90,
-                            "TargetGamma": 1.5
-                            }
-                        ],
-                        "X": 0.50, "Y": -0.06, "Z": 0.10,
-                        "Pitch": 0.0, "Roll": 0.0, "Yaw": 0.0
-                        },
-                        "front_right_custom": {
-                        "CaptureSettings": [
-                            {
-                            "PublishToRos": 1,
-                            "ImageType": 0,
-                            "Width": 672,
-                            "Height": 376,
-                            "FOV_Degrees": 90,
-                            "TargetGamma": 1.5
-                            }
-                        ],
-                        "X": 0.50, "Y": 0.06, "Z": 0.10,
-                        "Pitch": 0.0, "Roll": 0.0, "Yaw": 0.0
-                        }
                     },
                     "X": 2, "Y": 0, "Z": 0,
                     "Pitch": 0, "Roll": 0, "Yaw": 0
-                    }
+                  }
                 },
                 "SubWindows": [
-                    {"WindowID": 0, "ImageType": 0, "CameraName": "front_left_custom", "Visible": true},
-                    {"WindowID": 1, "ImageType": 0, "CameraName": "front_center_custom", "Visible": false},
-                    {"WindowID": 2, "ImageType": 0, "CameraName": "front_right_custom", "Visible": true}
                 ]
-            }
+              }
         },
         {
             "id": "2",
-            "name": "TUFast",
+            "name": "Team B",
             "master": "http://localhost:11312 ",
             "car_settings": {
-                "SettingsVersion": 1.2,
-                "ViewMode": "SpringArmChase",
-                "ClockSpeed": 1.0,
-                "Vehicles": {
-                    "FSCar": {
-                    "DefaultVehicleState": "",
-                    "EnableCollisionPassthrogh": false,
-                    "EnableCollisions": true,
-                    "AllowAPIAlways": true,
-                    "RC":{
-                        "RemoteControlID": -1
+              "SeeDocsAt": "https://fs-online.github.io/Formula-Student-Driverless-Simulator/",
+              "SettingsVersion": 1.2,
+              "ViewMode": "SpringArmChase",
+              "ClockSpeed": 1.0,
+              "SpectatorServerPassword": "password",
+              "PawnPaths": {
+                "DefaultCar": { "PawnBP": "Class'/AirSim/VehicleAdv/Cars/TechnionCar/TechnionCarPawn.TechnionCarPawn_C'" }
+              },
+              "Vehicles": {
+                "FSCar": {
+                  "DefaultVehicleState": "",
+                  "EnableCollisionPassthrogh": false,
+                  "EnableCollisions": true,
+                  "AllowAPIAlways": true,
+                  "RC":{
+                      "RemoteControlID": -1
+                  },
+                  "Sensors": {
+                    "Imu" : {
+                      "SensorType": 2,
+                      "Enabled": true
                     },
-                    "Sensors": {
-                        "Imu" : {
-                        "SensorType": 2,
-                        "Enabled": true
-                        },
-                        "Gps" : {
-                        "SensorType": 3,
-                        "Enabled": true
-                        },
-                        "LidarCustom": {
-                        "SensorType": 6,
-                        "Enabled": true,
-                        "NumberOfLasers": 16,
-                        "PointsPerScan": 10000,
-                        "X": 0,
-                        "Y": 0,
-                        "Z": -1,
-                        "DrawDebugPoints": false
-                        }
+                    "Gps" : {
+                      "SensorType": 3,
+                      "Enabled": true
                     },
-                    "Cameras": {
-                        "front_center_custom": {
-                        "CaptureSettings": [
-                            {
-                            "PublishToRos": 1,
-                            "ImageType": 0,
-                            "Width": 640,
-                            "Height": 480,
-                            "FOV_Degrees": 27,
-                            "DepthOfFieldFstop": 2.8,
-                            "DepthOfFieldFocalDistance": 200.0, 
-                            "DepthOfFieldFocalRegion": 200.0,
-                            "TargetGamma": 1.5
-                            }
-                        ],
-                        "X": 0.50, "Y": 0, "Z": 0.10,
-                        "Pitch": 0, "Roll": 0, "Yaw": 0
-                        },
-                        "front_left_custom": {
-                        "CaptureSettings": [
-                            {
-                            "PublishToRos": 1,
-                            "ImageType": 0,
-                            "Width": 672,
-                            "Height": 376,
-                            "FOV_Degrees": 90,
-                            "TargetGamma": 1.5
-                            }, 
-                            {
-                            "PublishToRos": 1,
-                            "ImageType": 1,
-                            "Width": 672,
-                            "Height": 376,
-                            "FOV_Degrees": 90,
-                            "TargetGamma": 1.5
-                            }
-                        ],
-                        "X": 0.50, "Y": -0.06, "Z": 0.10,
-                        "Pitch": 0.0, "Roll": 0.0, "Yaw": 0.0
-                        },
-                        "front_right_custom": {
-                        "CaptureSettings": [
-                            {
-                            "PublishToRos": 1,
-                            "ImageType": 0,
-                            "Width": 672,
-                            "Height": 376,
-                            "FOV_Degrees": 90,
-                            "TargetGamma": 1.5
-                            }
-                        ],
-                        "X": 0.50, "Y": 0.06, "Z": 0.10,
-                        "Pitch": 0.0, "Roll": 0.0, "Yaw": 0.0
-                        }
+                    "Lidar1": {
+                      "SensorType": 6,
+                      "Enabled": true,
+                      "X": 0, "Y": 0, "Z": -1,
+                      "Roll": 0, "Pitch": 0, "Yaw" : 0,
+                      "NumberOfLasers": 4,
+                      "PointsPerScan": 4096,
+                      "VerticalFOVUpper": 5,
+                      "VerticalFOVLower": -5,
+                      "HorizontalFOVStart": -90,
+                      "HorizontalFOVEnd": 90,
+                      "RotationsPerSecond": 10,
+                      "DrawDebugPoints": false
                     },
-                    "X": 2, "Y": 0, "Z": 0,
-                    "Pitch": 0, "Roll": 0, "Yaw": 0
+                    "Lidar2": {
+                      "SensorType": 6,
+                      "Enabled": true,
+                      "X": 0, "Y": 0, "Z": -2,
+                      "Roll": 0, "Pitch": 0, "Yaw" : 0,
+                      "NumberOfLasers": 4,
+                      "PointsPerScan": 4096,
+                      "VerticalFOVUpper": 5,
+                      "VerticalFOVLower": -5,
+                      "HorizontalFOVStart": -90,
+                      "HorizontalFOVEnd": 90,
+                      "RotationsPerSecond": 5,
+                      "DrawDebugPoints": false
+                    },
+                    "GSS" : {
+                      "SensorType": 7,
+                      "Enabled": true
                     }
-                },
-                "SubWindows": [
-                    {"WindowID": 0, "ImageType": 0, "CameraName": "front_left_custom", "Visible": true},
-                    {"WindowID": 1, "ImageType": 0, "CameraName": "front_center_custom", "Visible": true},
-                    {"WindowID": 2, "ImageType": 0, "CameraName": "front_right_custom", "Visible": true}
-                ]
+                  },
+                  "Cameras": {
+                    "cam1": {
+                      "CaptureSettings": [
+                        {
+                          "ImageType": 0,
+                          "Width": 785,
+                          "Height": 785,
+                          "FOV_Degrees": 90
+                        }
+                      ],
+                      "X": 1.0,
+                      "Y": 0.06,
+                      "Z": -1.20,
+                      "Pitch": 0.0,
+                      "Roll": 0.0,
+                      "Yaw": 0
+                    },
+                    "cam2": {
+                      "CaptureSettings": [
+                        {
+                          "ImageType": 0,
+                          "Width": 785,
+                          "Height": 785,
+                          "FOV_Degrees": 90
+                        }
+                      ],
+                      "X": 1.0,
+                      "Y": 0.56,
+                      "Z": -1.20,
+                      "Pitch": 0.0,
+                      "Roll": 0.0,
+                      "Yaw": 0.0
+                    }
+                  },
+                  "X": 2, "Y": 0, "Z": 0,
+                  "Pitch": 0, "Roll": 0, "Yaw": 0
+                }
+              },
+              "SubWindows": [
+              ]
             }
         }
     ]
